--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./iconfont.css">
   </head>
   <body>
     <noscript>
